Fix overflow on main container for small desktop

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ div.title {
     align-items: center;
     justify-content: space-between;
     gap: 3rem;
+    border-radius: 1rem 1rem 0 0;
 
     padding: 3rem 0 1rem 0;
     min-height: 20vh;
@@ -64,6 +65,7 @@ div.title {
     flex-direction: column;
     gap: 4rem;
 
+    border-radius: 0 0 1rem 1rem;
     padding: 3rem 2rem;
     background-color:#F6F5F2;
     font-weight: 500;
@@ -75,7 +77,7 @@ div.title {
     flex-direction: column;
     width: 90vw;
     border-radius: 1rem;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .signup {
@@ -253,6 +255,7 @@ div.credits {
 .form-input {
     padding: 5rem 3rem;
     font-size: 1.3rem;
+    border-radius: 0 1rem 1rem 0;
 }
 
 .form-row {
@@ -272,6 +275,7 @@ div.credits {
     align-items:unset;
     min-width: 25vw;
     padding-top: 10rem;
+    border-radius: 1rem 0 0 1rem;
 }
 
 }
